Create initial main board, sidebar, header. Add assets.

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,65 +4,160 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
   margin: 0;
+}
+
+.header {
+  background-color: #484848;
+  color: rgb(220, 220, 220);
+  height: 3rem;
+  padding: 0.75rem;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid black;
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+  h3 {
+    color: rgb(220, 220, 220);
+    position: absolute;
+    left: 50%;
   }
-  a:hover {
-    color: #747bff;
+
+  .header-buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+
+    .more-button {
+      padding: 0.5rem;
+      height: 2rem;
+      border-radius: 0.25rem;
+      background: transparent;
+      border: none;
+      cursor: pointer;
+      transition: background-color 0.3s ease-in-out;
+
+      &:hover {
+        background-color: #5d5959;
+      }
+    }
   }
-  button {
-    background-color: #f9f9f9;
+}
+
+
+
+.sidebar {
+  display: flex;
+  background-color: #3d3d3d;
+  height: calc(100vh - 3rem);
+  border-right: 1px solid black;
+  color: rgb(220, 220, 220);
+
+  .collapsed {
+    width: 30px;
+  }
+
+  .not-collapsed {
+    width: 200px;
+    font-weight: bold;
+  }
+
+  .chevron-button, .plus-button {
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+    outline: none;
+    cursor: pointer;   
+  }
+
+  .chevron-left {
+    padding-left: 45%;
+  }
+
+  .chevron-right {
+    padding-left: 30%;
+  }
+
+  .workspace {
+    padding: 0.75rem;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #666666;
+  }
+
+  .board {
+    display: flex;
+  }
+
+  .boardlist {
+    padding: 0.5rem 0.75rem;
+  }
+
+  .plus-button {
+    padding-left: 50%;
+  }
+
+  .board-button {
+    width: 100%;
+    padding: 0.5rem 0.75rem;
+    font-size: 0.875rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: baseline;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    color: rgb(220, 220, 220);
+
+    &:hover {
+      background-color: #5d5959;
+    }
+
+    .color-box {
+      width: 1.5rem;
+      height: max-content;
+      border-radius: 0.125rem;
+      margin-right: 0.5rem;
+    }
+  }
+
+  .board-ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .list-item-disc {
+    width: 10px;
+    height: 10px;
+    background-color: red;
+    border-radius: 50%;
+  }
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+
+  .board-header {
+    padding-left: 1rem;
+    background-color: #3d3d3d;
+
+    h2 {
+      font-size: 1.125rem;
+      color: rgb(220, 220, 220);
+    }
+  }
+
+  .board-main {
+    background-color: #666666;
+    height: 100%;
   }
 }
