--- a/src/index.scss
+++ b/src/index.scss
@@ -77,11 +77,12 @@ body {
   }
 
   .chevron-left {
-    padding-left: 45%;
+    margin-left: 45%;
   }
 
   .chevron-right {
-    padding-left: 30%;
+    margin-left: 30%;
+    margin-top: 15px;
   }
 
   .workspace {
@@ -100,7 +101,7 @@ body {
   }
 
   .plus-button {
-    padding-left: 50%;
+    margin-left: 50%;
   }
 
   .board-button {
@@ -183,10 +184,114 @@ body {
   .list-item {
     display: flex;
     justify-content: space-between;
+    padding: 0 0.25rem 0.5rem 0.25rem;
+  }
+
+  .list-body {
     padding: 0.25rem;
   }
 
   .list-item-button {
     cursor: pointer;
   }
+
+  .item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.25rem;
+    background-color: #666666;
+
+    border-radius: 0.375rem;
+      border: 1px solid #666666;
+    
+      &:hover {
+        border-color: #a4a4a4;
+    }
+    
+  }
+
+  .edit-description-span {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  .edit-description {
+    width: 11px;
+    height: 16px;
+    background: none;
+    cursor: pointer;
+  }
+
+  .card-add {
+    padding-top: 0.5rem;
+
+    .card-input {
+      display: flex;
+      flex-direction: column;
+    }
+  
+    .textarea {
+      border-radius: 6px;
+      border: 1px solid #666666;
+      background-color: #444444;
+      color: white;
+      resize: none;
+      padding-left: 0.25rem;
+      height: 100px;
+  
+      &:focus {
+        outline: none;
+      }
+    }
+  
+    .button-group {
+      display: flex;
+      padding-top: 0.5rem;
+      
+      .add-button {
+        padding: 6px 10px;
+        border-radius: 4px;
+        background-color: #666666;
+        color: white;
+        margin-right: 8px;
+        border: none;
+        cursor: pointer;
+        
+        &:hover {
+          background-color: #5d5959;
+        }
+      }
+  
+      .close-button {
+        display: flex;
+        padding: 6px;
+        border-radius: 4px;
+        background: none;
+        border: none;
+        cursor: pointer;
+  
+        &:hover {
+          background-color: #666666;
+        }
+      }
+    }
+  
+    .add-card-button {
+      padding: 6px 10px;
+      border-radius: 4px;
+      background: none;
+      color: white;
+      margin-right: 8px;
+      border: none;
+      cursor: pointer;
+      
+      
+      &:hover {
+        background-color: #666666;
+      }
+    }
+  }
+  
 }
