--- a/src/index.scss
+++ b/src/index.scss
@@ -94,6 +94,7 @@ body {
 
   .board {
     display: flex;
+    position: relative;
   }
 
   .boardlist {
@@ -141,6 +142,76 @@ body {
     background-color: red;
     border-radius: 50%;
   }
+
+  .popover-container {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    background-color: rgb(130, 130, 130);
+    left: 105%;
+    width: 180px;
+    border-radius: 4px;
+    color:white;
+    padding-top: 0.5rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .separator {
+    border: none;
+    height: 1px;
+    background-color: #666666;
+    margin: 8px 0;
+    width: 100%;
+  }
+
+  .new-board-title {
+    display: flex;
+    flex-direction: column;
+    font-size: small;
+
+    .title-input {
+      border-radius: 4px;
+      border: 1px solid #666666;
+      background-color: rgb(130, 130, 130);
+      resize: none;
+  
+      &:focus {
+        outline: none;
+      }
+    }
+  }
+
+  .new-board-color {
+    display: flex;
+    flex-direction: column;
+    font-size: small;
+    padding-bottom: 0.5rem;
+
+    .color-input {
+      border-radius: 4px;
+      border: 1px solid #666666;
+      background-color: rgb(130, 130, 130);
+      width: 100%;
+      height: 30px;
+    }
+  }
+
+  .create-board-button {
+      padding: 6px 10px;
+      border-radius: 4px;
+      color: white;
+      margin-right: 8px;
+      border: none;
+      cursor: pointer;
+      background-color: #666666;
+      width: 100%;
+      margin-bottom: 0.5rem;
+      
+      &:hover {
+        background-color: #a4a4a4;
+      }
+    }
 }
 
 .main {
