--- a/src/index.scss
+++ b/src/index.scss
@@ -111,7 +111,7 @@ body {
     font-size: 0.875rem;
     display: flex;
     justify-content: flex-start;
-    align-items: baseline;
+    align-items: center;
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -123,9 +123,9 @@ body {
     }
 
     .color-box {
-      width: 1.5rem;
-      height: max-content;
-      border-radius: 0.125rem;
+      width: 0.75rem;
+      height: 0.75rem;;
+      border-radius: 50%;
       margin-right: 0.5rem;
     }
   }
@@ -134,12 +134,6 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
-  }
-
-  .list-item-disc {
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
   }
 
   .popover-container {
