--- a/src/index.scss
+++ b/src/index.scss
@@ -77,11 +77,12 @@ body {
   }
 
   .chevron-left {
-    padding-left: 45%;
+    margin-left: 45%;
   }
 
   .chevron-right {
-    padding-left: 30%;
+    margin-left: 30%;
+    margin-top: 15px;
   }
 
   .workspace {
@@ -93,6 +94,7 @@ body {
 
   .board {
     display: flex;
+    position: relative;
   }
 
   .boardlist {
@@ -100,7 +102,7 @@ body {
   }
 
   .plus-button {
-    padding-left: 50%;
+    margin-left: 50%;
   }
 
   .board-button {
@@ -109,7 +111,7 @@ body {
     font-size: 0.875rem;
     display: flex;
     justify-content: flex-start;
-    align-items: baseline;
+    align-items: center;
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -121,9 +123,9 @@ body {
     }
 
     .color-box {
-      width: 1.5rem;
-      height: max-content;
-      border-radius: 0.125rem;
+      width: 0.75rem;
+      height: 0.75rem;;
+      border-radius: 50%;
       margin-right: 0.5rem;
     }
   }
@@ -134,12 +136,75 @@ body {
     padding: 0;
   }
 
-  .list-item-disc {
-    width: 10px;
-    height: 10px;
-    background-color: red;
-    border-radius: 50%;
+  .popover-container {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    background-color: rgb(130, 130, 130);
+    left: 105%;
+    width: 180px;
+    border-radius: 4px;
+    color:white;
+    padding-top: 0.5rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }
+
+  .separator {
+    border: none;
+    height: 1px;
+    background-color: #666666;
+    margin: 8px 0;
+    width: 100%;
+  }
+
+  .new-board-title {
+    display: flex;
+    flex-direction: column;
+    font-size: small;
+
+    .title-input {
+      border-radius: 4px;
+      border: 1px solid #666666;
+      background-color: rgb(130, 130, 130);
+      resize: none;
+  
+      &:focus {
+        outline: none;
+      }
+    }
+  }
+
+  .new-board-color {
+    display: flex;
+    flex-direction: column;
+    font-size: small;
+    padding-bottom: 0.5rem;
+
+    .color-input {
+      border-radius: 4px;
+      border: 1px solid #666666;
+      background-color: rgb(130, 130, 130);
+      width: 100%;
+      height: 30px;
+    }
+  }
+
+  .create-board-button {
+      padding: 6px 10px;
+      border-radius: 4px;
+      color: white;
+      margin-right: 8px;
+      border: none;
+      cursor: pointer;
+      background-color: #666666;
+      width: 100%;
+      margin-bottom: 0.5rem;
+      
+      &:hover {
+        background-color: #a4a4a4;
+      }
+    }
 }
 
 .main {
@@ -183,10 +248,114 @@ body {
   .list-item {
     display: flex;
     justify-content: space-between;
+    padding: 0 0.25rem 0.5rem 0.25rem;
+  }
+
+  .list-body {
     padding: 0.25rem;
   }
 
   .list-item-button {
     cursor: pointer;
   }
+
+  .item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.25rem;
+    background-color: #666666;
+
+    border-radius: 0.375rem;
+      border: 1px solid #666666;
+    
+      &:hover {
+        border-color: #a4a4a4;
+    }
+    
+  }
+
+  .edit-description-span {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  .edit-description {
+    width: 11px;
+    height: 16px;
+    background: none;
+    cursor: pointer;
+  }
+
+  .card-add {
+    padding-top: 0.5rem;
+
+    .card-input {
+      display: flex;
+      flex-direction: column;
+    }
+  
+    .textarea {
+      border-radius: 6px;
+      border: 1px solid #666666;
+      background-color: #444444;
+      color: white;
+      resize: none;
+      padding-left: 0.25rem;
+      height: 100px;
+  
+      &:focus {
+        outline: none;
+      }
+    }
+  
+    .button-group {
+      display: flex;
+      padding-top: 0.5rem;
+      
+      .add-button {
+        padding: 6px 10px;
+        border-radius: 4px;
+        background-color: #666666;
+        color: white;
+        margin-right: 8px;
+        border: none;
+        cursor: pointer;
+        
+        &:hover {
+          background-color: #5d5959;
+        }
+      }
+  
+      .close-button {
+        display: flex;
+        padding: 6px;
+        border-radius: 4px;
+        background: none;
+        border: none;
+        cursor: pointer;
+  
+        &:hover {
+          background-color: #666666;
+        }
+      }
+    }
+  
+    .add-card-button {
+      padding: 6px 10px;
+      border-radius: 4px;
+      background: none;
+      color: white;
+      margin-right: 8px;
+      border: none;
+      cursor: pointer;
+      
+      
+      &:hover {
+        background-color: #666666;
+      }
+    }
+  }
+  
 }
